Forcing the shop screens to scroll vertically on mobile to prevent the menu from incompletely covering the page content.

--- a/client/shop/directives/budget/Budget.scss
+++ b/client/shop/directives/budget/Budget.scss
@@ -1,3 +1,14 @@
 :host-context {
     /* styles should be scoped under host-context */
+    .budget  {
+        overflow: auto;
+        max-height: calc(100vh - 82px);
+    }
+
+    @media (min-width: 768px) {
+        .budget  {
+            overflow: visible;
+            max-height: none;
+        }
+    }
 }
