--- a/client/shop/directives/orders/Orders.scss
+++ b/client/shop/directives/orders/Orders.scss
@@ -2,6 +2,11 @@
 
 :host-context {
     /* styles should be scoped under host-context */
+    .orders  {
+        overflow: auto;
+        max-height: calc(100vh - 82px);
+    }
+
     .row-margin {
         margin: 25px 0;
     }
@@ -108,6 +113,11 @@
     }
 
     @media (min-width: 768px) {
+        .orders  {
+            overflow: visible;
+            max-height: none;
+        }
+
         .col-left {
             display: block;
         }
