--- a/client/shop/directives/product-cart/ProductCart.scss
+++ b/client/shop/directives/product-cart/ProductCart.scss
@@ -1,8 +1,12 @@
 @import "../../../shared/scss/_variables";
 
 :host-context {
-
     /* styles should be scoped under host-context */
+    .prod-cart  {
+        overflow: auto;
+        max-height: calc(100vh - 82px);
+    }
+
     .your-cart {
         margin-top: 24px;
         color: $color-near-black;
@@ -111,6 +115,11 @@
     }
 
     @media (min-width: 768px) {
+        .prod-cart  {
+            overflow: visible;
+            max-height: none;
+        }
+
         .price-column {
             width: 100px;
         }
