--- a/client/shop/directives/product-list/ProductList.scss
+++ b/client/shop/directives/product-list/ProductList.scss
@@ -2,6 +2,11 @@
 
 :host-context {
     /* styles should be scoped under host-context */
+    .prod-list  {
+        overflow: auto;
+        max-height: calc(100vh - 82px);
+    }
+
     .col-left {
         display: none;
     }
@@ -58,6 +63,11 @@
     }
 
     @media (min-width: 768px) {
+        .prod-list  {
+            overflow: visible;
+            max-height: none;
+        }
+
         .col-left {
             display: block;
         }
